--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: mask google api key
-        run: echo "::add-mask::${{ secrets.GOOGLE_API_KEY }}"
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -44,6 +42,8 @@ jobs:
       - name: Build json
         run: |
           python app.py
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
