毎月1日に変更

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,7 @@ on:
     branches:
       - main
   schedule:
-    # 毎日 00:00 (UTC) に実行
-    - cron: "0 0 * * *"
-  # 手動実行もできるようにしておくと便利
+    - cron: "0 0 1 * *"
   workflow_dispatch:
 
 # GitHub Pages 用の権限
