ドラスピについて注釈

--- a/config.yml
+++ b/config.yml
@@ -69,7 +69,8 @@ game_specific:
 
   # バーチャファイター eスポーツ(Ver.2.01)とバーチャファイター eスポーツ(Ver.2.0.1)が違うか不明だったので保留
 
-  # ドラゴンスピリットに『新Ver.』という部門があるのと、ドラゴンスピリット(新Ver.)
+  # ドラゴンスピリットに『新Ver.』という部門があるのと、ドラゴンスピリット(新Ver.)というゲームがある。
+  # 一旦全く別のものとみなす
 
   - game: "パロディウスだ!"
     departments:
